added signup page and used passport authentication local hashing method

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "btns",
+        "demouser",
         "getcookies",
         "getsignedcookie",
         "Mykonos",
