--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "engines":{
+  "engines": {
     "node": "20.10.0"
   },
   "name": "traveler",
@@ -28,10 +28,12 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node": "^21.6.2",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "punycode": "^2.3.1"
   },
   "description": ""
 }
