--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "version":2,
-    "build":[{"scr":"./app.js", "use": "@vercel/node"}],
+    "builds":[{"scr":"./app.js", "use": "@vercel/node"}],
     "routes":[{"src":"/(.*)","dest":"/app.js"}]
 }
